reducer stuffs yay

--- a/src/components/PackageSearchBar/PackageSearchBar.css
+++ b/src/components/PackageSearchBar/PackageSearchBar.css
@@ -5,6 +5,9 @@
 .btn{
   margin-top: 1.5rem;
 }
+#pageDropDown{
+  margin-top: 0 !important;
+}
 
 @media only screen and (max-width: 770px) {
   .bar {
