--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,32 @@
   transition: all 0.1s ease;
   position: relative;
 }
+
+/*courier and package route css*/
+/**/
+.result-table {
+  overflow-x: auto;
+  padding-bottom: 100px;
+}
+
+/* search bar */
+.bar {
+  margin: 1rem 0 0 0;
+}
+
+@media only screen and (max-width: 770px) {
+  .bar {
+    margin: 0.8rem 0 0 0;
+  }
+}
+
+/* googlemaps */
+.googmaps {
+  margin: 1.5rem 0 1.5rem 0;
+}
+
+/* table */
+.react-bootstrap-table table {
+  table-layout: auto;
+  vertical-align: middle;
+}
